# ba

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL.txt  dofFEM.txt  external_libs.txt
cmake/: FindCUDA.cmake  FindGPERF.cmake  FindHDF5.cmake  FindILU++.cmake  FindILU++Default.cmake  FindLikwid.cmake  FindMETIS.cmake  FindP4EST.cmake  FindPETSC.cmake  FindTinyXML2.cmake  FindVCL.cmake  HiFlowConfiguration.cmake
doc/: Doxyfile.in  INSTALLATION
examples/: CMakeLists.txt
examples/boussinesq2d/: HiFlowFiles.cmake
examples/boussinesq2d/template/: HiFlowFiles.cmake  boussinesq2d.cc  boussinesq2d.h  boussinesq2d.xml  run_uq.sh
exercises/: CMakeLists.txt
exercises/data/: HiFlowFiles.cmake  cavity_les.inp  dfg2d_cyl.inp  reentrant_corner.inp  unit_square-2_tri.inp  unit_square-tri.inp  unit_square_2_cells.inp
exercises/ex0_poisson/: HiFlowFiles.cmake  ex0_poisson.cc  ex0_poisson.h
exercises/ex0_poisson/solution/: HiFlowFiles.cmake  ex0_poisson.cc  ex0_poisson.h  ex0_poisson.xml
exercises/ex10_MagnusEffect/: HiFlowFiles.cmake  channel.inp  ex10_MagnusEffect.cc  ex10_MagnusEffect.h  ex10_MagnusEffect.xml
exercises/ex10_MagnusEffect/mesh_generation/: create_channel_mesh.py
exercises/ex10_MagnusEffect/solution/: HiFlowFiles.cmake  ex10_MagnusEffect.cc  ex10_MagnusEffect.h
exercises/ex11_StokesConvergence/: HiFlowFiles.cmake  ex11_StokesConvergence.cc  ex11_StokesConvergence.h  ex11_StokesConvergence.xml  run.py
exercises/ex12_MultigridNavierStokes/: HiFlowFiles.cmake  ex12_MultigridNavierStokes.cc  ex12_MultigridNavierStokes.h  ex12_MultigridNavierStokes.xml
exercises/ex13_MagnusNaturalConvection/: HiFlowFiles.cmake  ex13_MagnusNaturalConvection.cc  ex13_MagnusNaturalConvection.h
exercises/ex13_MagnusNaturalConvection/mesh_generation/: channel.geo  channel.vtk  channel_params.geo
exercises/ex13_MagnusNaturalConvection/solution/: HiFlowFiles.cmake  ex13_MagnusNaturalConvection.cc  ex13_MagnusNaturalConvection.h  ex13_MagnusNaturalConvection.xml
exercises/ex1_poisson/: HiFlowFiles.cmake  ex1_poisson.cc  ex1_poisson.h  ex1_poisson.xml
exercises/ex1_poisson/solution/: HiFlowFiles.cmake  ex1_poisson.cc  ex1_poisson.h
exercises/ex2_NonlinearPoisson/: HiFlowFiles.cmake  ex2_NonlinearPoisson.cc  ex2_NonlinearPoisson.h  ex2_NonlinearPoisson.xml
exercises/ex2_NonlinearPoisson/solution/: HiFlowFiles.cmake  ex2_NonlinearPoisson.cc  ex2_NonlinearPoisson.h
exercises/ex3_CavityStokes/: HiFlowFiles.cmake  ex3_CavityStokes.cc  ex3_CavityStokes.h  ex3_CavityStokes.xml
exercises/ex3_CavityStokes/solution/: HiFlowFiles.cmake  ex3_CavityStokes.cc  ex3_CavityStokes.h
exercises/ex4_InstationaryStokes/: HiFlowFiles.cmake  ex4_InstationaryStokes.cc  ex4_InstationaryStokes.h
exercises/ex4_InstationaryStokes/solution/: HiFlowFiles.cmake  ex4_InstationaryStokes.cc  ex4_InstationaryStokes.h  ex4_InstationaryStokes.xml
exercises/ex5_StabilizedStokes/: HiFlowFiles.cmake  ex5_StabilizedStokes.cc  ex5_StabilizedStokes.h  ex5_StabilizedStokes.xml
exercises/ex5_StabilizedStokes/solution/: HiFlowFiles.cmake  ex5_StabilizedStokes.cc  ex5_StabilizedStokes.h
exercises/ex6_FoilStokes/: HiFlowFiles.cmake  ex6_FoilStokes.cc  ex6_FoilStokes.h  ex6_FoilStokes.xml
exercises/ex6_FoilStokes/mesh_generation/: channel.geo  channel.vtk  channel_params.geo  convert_vtk_2_inp.py  create_channel_mesh.py
exercises/ex6_FoilStokes/solution/: HiFlowFiles.cmake  channel.inp  ex6_FoilStokes.cc  ex6_FoilStokes.h
exercises/ex7_CavityNavierStokes/: HiFlowFiles.cmake  ex7_CavityNavierStokes.cc  ex7_CavityNavierStokes.h
exercises/ex7_CavityNavierStokes/solution/: HiFlowFiles.cmake  ex7_CavityNavierStokes.cc  ex7_CavityNavierStokes.h  ex7_CavityNavierStokes.xml
exercises/ex8_FoilNavierStokes/: HiFlowFiles.cmake  ex8_FoilNavierStokes.cc  ex8_FoilNavierStokes.h
exercises/ex8_FoilNavierStokes/mesh_generation/: channel.geo  channel.vtk  channel_params.geo  create_channel_mesh.py
exercises/ex8_FoilNavierStokes/solution/: HiFlowFiles.cmake  channel.inp  ex8_FoilNavierStokes.cc  ex8_FoilNavierStokes.h  ex8_FoilNavierStokes.xml
exercises/ex9_CavityNavierStokes/: HiFlowFiles.cmake  ex9_CavityNavierStokes.cc  ex9_CavityNavierStokes.h
exercises/ex9_CavityNavierStokes/solution/: HiFlowFiles.cmake  ex9_CavityNavierStokes.cc  ex9_CavityNavierStokes.h  ex9_CavityNavierStokes.xml
src/: CMakeLists.txt  config.h.in  directory.h.in  hiflow.h.in
tests/: CMakeLists.txt  attributes_test.cc  bdry_integration_test.cc  big_mesh_test.cc  binary_io_test.cc  block_matrix_test.cc  block_vector_test.cc  boundary_extraction_test.cc  cell_transformation_test.cc  cell_type_test.cc  cg_test.cc  closest_point_test.cc  coupled_matrix_dense_test.cc  coupled_matrix_mesh_test.cc  cuda_test.cc  dof_extended_identification_2D_test.cc  dof_extended_identification_3D_test.cc  dof_identification_test.cc  facet_integral_test.cc  facet_normal_test.cc  fe_bdm1_test.cc  fe_hdiv_test.cc  fe_interpol_conv_test.cc  fe_interpol_eval_test.cc  fe_nodal_test.cc  fe_projection_conv_test.cc  fe_transformation_test.cc  fe_weight_ordering_test.cc  fe_weight_test.cc  geometric_tools_test.cc  hdf5_test.cc  hp_assembly_test.cc  hp_assembly_test.h  incidence_iteration_test.cc  incident_vertex_iterator_test.cc  integration_test.cc  lmp_test.cc  material_number_test.cc  mesh_interface_test.cc  mpi_test.cc  (+25 more)
tests/data/: find_adjacent_cells_cubemesh.inp  find_adjacent_cells_tetramesh.inp  point_eval_test.xml  unit_square-2_tri.inp
tests/old/: dof_extended_identification_2D_test.cc  dof_extended_identification_test.cc  eval_fe_solution_test.cc  fe_weight_zero_test.cc  parallel_adaptive_jump_term_test.cc  parallel_adaptive_jump_term_test.h  point_evaluator3D_test.cc  point_evaluator_2D_test.cc  vector_space_test.cc
utils/: CMakeLists.txt  binaryvtu2asciivtu.py  check_for_release.py  check_mesh_input.cc  check_partitioning.cc  dakota_config_template.in  dakota_simulator_script_template  extract_mesh_lib.pl  find_circular_dependencies.py  info2html.pl  inp2vtu.cc  make_release.py  make_tutorial.py  mesh2vtu.py  mesh_refiner.cc  partition_mesh.cc  (+8 more)
(+746 files in other folders)
